--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anaheim&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @layer base {
-  #root {
+  .app {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     @apply h-screen bg-slate-50 font-body;
